--- a/_data/teams.yml
+++ b/_data/teams.yml
@@ -129,6 +129,9 @@ ml:
     tenure: 2021-
     url: https://sanchit-ahuja.github.io
     active: true
+  - name: Shikhar Mohan
+    tenure: 2021-
+    url: https://github.com/shikharmn
 engineering:
   - name: Abhishek Sachdeva
     tenure: 2019-2021
